setup -  gathering the api key

--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPde0QrryTgEc44TTQn0240",
+      "authorship_tag": "ABX9TyMdTEBdyjUlWzkdA0zseHW2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#api key setup - don't share with anyone\n",
+        "\n",
+        "from google.colab import userdata\n",
+        "import google.generativeai as genai\n",
+        "\n",
+        "GOOGLE_API_KEY = userdata.get('SECRET_KEY');\n",
+        "\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)\n"
+      ],
       "metadata": {
         "id": "PFPQ3Oont0Qv"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VJQCkL8A0Vkw"
       },
       "execution_count": null,
       "outputs": []
