code for showing available models to use

--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdTEBdyjUlWzkdA0zseHW2",
+      "authorship_tag": "ABX9TyOz38ohbQP9JK3R6pjXM85X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,12 +59,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#LIST AVAILABLE GEMINI MODELS\n",
+        "\n",
+        "for model in genai.list_models():\n",
+        "  if 'generateContent' in model.supported_generation_methods:\n",
+        "    print(model.name)\n"
+      ],
       "metadata": {
-        "id": "VJQCkL8A0Vkw"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "id": "VJQCkL8A0Vkw",
+        "outputId": "1854604f-4f4c-485e-9d1f-ff4004028bbe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "models/gemini-1.0-pro\n",
+            "models/gemini-1.0-pro-001\n",
+            "models/gemini-1.0-pro-latest\n",
+            "models/gemini-1.0-pro-vision-latest\n",
+            "models/gemini-1.5-flash\n",
+            "models/gemini-1.5-flash-001\n",
+            "models/gemini-1.5-flash-latest\n",
+            "models/gemini-1.5-pro\n",
+            "models/gemini-1.5-pro-001\n",
+            "models/gemini-1.5-pro-latest\n",
+            "models/gemini-pro\n",
+            "models/gemini-pro-vision\n"
+          ]
+        }
+      ]
     }
   ]
 }
