Initializing generative model 'gemini-1.0-pro' before starting conversation

--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOz38ohbQP9JK3R6pjXM85X",
+      "authorship_tag": "ABX9TyMsb9HU+LmIqbuG4rUl5ENj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,9 +72,9 @@
           "height": 225
         },
         "id": "VJQCkL8A0Vkw",
-        "outputId": "1854604f-4f4c-485e-9d1f-ff4004028bbe"
+        "outputId": "ea509770-f470-4d90-ab7d-b0c837a5c991"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,6 +92,82 @@
             "models/gemini-1.5-pro-latest\n",
             "models/gemini-pro\n",
             "models/gemini-pro-vision\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#candidate_count -> number of possible answers for a request\n",
+        "#temperature ->\n",
+        "    #closer to 1 -> model is gonna behave creatively\n",
+        "    #closer to 0 -> model is gonna be more precise\n",
+        "generation_config = {\n",
+        "    'candidate_count': 1,\n",
+        "    'temperature': 0.5\n",
+        "}\n",
+        "\n",
+        "safety_settings = [\n",
+        "  {\n",
+        "    \"category\": \"HARM_CATEGORY_HARASSMENT\",\n",
+        "    \"threshold\": \"BLOCK_MEDIUM_AND_ABOVE\",\n",
+        "  },\n",
+        "  {\n",
+        "    \"category\": \"HARM_CATEGORY_HATE_SPEECH\",\n",
+        "    \"threshold\": \"BLOCK_MEDIUM_AND_ABOVE\",\n",
+        "  },\n",
+        "  {\n",
+        "    \"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\",\n",
+        "    \"threshold\": \"BLOCK_MEDIUM_AND_ABOVE\",\n",
+        "  },\n",
+        "  {\n",
+        "    \"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\",\n",
+        "    \"threshold\": \"BLOCK_MEDIUM_AND_ABOVE\",\n",
+        "  },\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "6aSlth6U7Fik"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#INICTIALIZE THE MODEL\n",
+        "model = genai.GenerativeModel(model_name=\"gemini-1.0-pro\", safety_settings=safety_settings,\n",
+        "generation_config=generation_config);\n",
+        "\n",
+        "'''\n",
+        "return model name\n",
+        "return generation config infos(candidate_count, temperature....)\n",
+        "return safety settings info\n",
+        "'''\n",
+        "print(model)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zFG4Asbs-B6o",
+        "outputId": "06eceafc-fa3e-4d4b-c297-eddbafb26df1"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "genai.GenerativeModel(\n",
+            "    model_name='models/gemini-1.0-pro',\n",
+            "    generation_config={'candidate_count': 1, 'temperature': 0.5},\n",
+            "    safety_settings={<HarmCategory.HARM_CATEGORY_HARASSMENT: 7>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_HATE_SPEECH: 8>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_SEXUALLY_EXPLICIT: 9>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_DANGEROUS_CONTENT: 10>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>},\n",
+            "    tools=None,\n",
+            "    system_instruction=None,\n",
+            ")\n"
           ]
         }
       ]
