simple chatbot question

--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsb9HU+LmIqbuG4rUl5ENj",
+      "authorship_tag": "ABX9TyN7orEOAfKkFss6JkFaNJr5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zFG4Asbs-B6o",
-        "outputId": "06eceafc-fa3e-4d4b-c297-eddbafb26df1"
+        "outputId": "107f5e50-5779-498a-9dc1-28030e26f5c7"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +168,34 @@
             "    tools=None,\n",
             "    system_instruction=None,\n",
             ")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CREATING A SIMPLE CHATBOT QUESTION\n",
+        "\n",
+        "response = model.generate_content(\"Qual a capital do Brasil?\")\n",
+        "\n",
+        "print(response.text);\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "H9QFd4BDF8ll",
+        "outputId": "c8f05389-d244-4af3-f74d-28bf20945e31"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Brasília\n"
           ]
         }
       ]
