--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "PFPQ3Oont0Qv"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,34 +67,10 @@
         "    print(model.name)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 225
-        },
-        "id": "VJQCkL8A0Vkw",
-        "outputId": "ea509770-f470-4d90-ab7d-b0c837a5c991"
+        "id": "VJQCkL8A0Vkw"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "models/gemini-1.0-pro\n",
-            "models/gemini-1.0-pro-001\n",
-            "models/gemini-1.0-pro-latest\n",
-            "models/gemini-1.0-pro-vision-latest\n",
-            "models/gemini-1.5-flash\n",
-            "models/gemini-1.5-flash-001\n",
-            "models/gemini-1.5-flash-latest\n",
-            "models/gemini-1.5-pro\n",
-            "models/gemini-1.5-pro-001\n",
-            "models/gemini-1.5-pro-latest\n",
-            "models/gemini-pro\n",
-            "models/gemini-pro-vision\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -131,7 +107,7 @@
       "metadata": {
         "id": "6aSlth6U7Fik"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,28 +125,10 @@
         "print(model)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zFG4Asbs-B6o",
-        "outputId": "9a6f529a-5058-471a-e476-5d689db00fca"
+        "id": "zFG4Asbs-B6o"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "genai.GenerativeModel(\n",
-            "    model_name='models/gemini-1.0-pro',\n",
-            "    generation_config={'candidate_count': 1, 'temperature': 0.5},\n",
-            "    safety_settings={<HarmCategory.HARM_CATEGORY_HARASSMENT: 7>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_HATE_SPEECH: 8>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_SEXUALLY_EXPLICIT: 9>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>, <HarmCategory.HARM_CATEGORY_DANGEROUS_CONTENT: 10>: <HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE: 2>},\n",
-            "    tools=None,\n",
-            "    system_instruction=None,\n",
-            ")\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -182,23 +140,11 @@
         "print(response.text);\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
         "id": "H9QFd4BDF8ll",
-        "outputId": "e2b846d0-d89d-41bc-fa17-4cb8bb4ef38a"
+        "collapsed": true
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Brasília\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
