some function created for setting up api key and list available models

--- a/comparador_preco_chatbot.ipynb
+++ b/comparador_preco_chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdGTTGfRL9dnZ/8mKlHb3H",
+      "authorship_tag": "ABX9TyMEUe9VR3r12nvoB/o3HaBd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "5kXixgpmtjiV"
       },
@@ -41,18 +41,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#api key setup - don't share with anyone\n",
-        "\n",
-        "from google.colab import userdata\n",
-        "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY = userdata.get('SECRET_KEY');\n",
-        "\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)\n"
-      ],
+      "source": [],
       "metadata": {
-        "id": "PFPQ3Oont0Qv"
+        "id": "vgW51lsvIlzG"
       },
       "execution_count": null,
       "outputs": []
@@ -60,17 +51,76 @@
     {
       "cell_type": "code",
       "source": [
-        "#LIST AVAILABLE GEMINI MODELS\n",
+        "#api key setup - don't share with anyone\n",
+        "def configureApiKey(secret_key):\n",
+        "  genai.configure(api_key=secret_key)\n",
         "\n",
-        "for model in genai.list_models():\n",
-        "  if 'generateContent' in model.supported_generation_methods:\n",
-        "    print(model.name)\n"
+        "#list available gemini models\n",
+        "def showAvailableGeminiModels(model_list):\n",
+        "    for model in genai.list_models():\n",
+        "      if 'generateContent' in model.supported_generation_methods:\n",
+        "        print(model.name)\n"
       ],
       "metadata": {
-        "id": "VJQCkL8A0Vkw"
+        "id": "opOuUO13IOUC"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "from google.colab import userdata\n",
+        "import google.generativeai as genai\n",
+        "\n",
+        "GOOGLE_API_KEY = userdata.get('SECRET_KEY');\n",
+        "\n",
+        "configureApiKey(GOOGLE_API_KEY);\n"
+      ],
+      "metadata": {
+        "id": "PFPQ3Oont0Qv"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#LIST AVAILABLE GEMINI MODELS\n",
+        "\n",
+        "showAvailableGeminiModels(genai.list_models);\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "id": "VJQCkL8A0Vkw",
+        "outputId": "e1da65e1-564e-439a-e748-f6dc74cfaed1"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "models/gemini-1.0-pro\n",
+            "models/gemini-1.0-pro-001\n",
+            "models/gemini-1.0-pro-latest\n",
+            "models/gemini-1.0-pro-vision-latest\n",
+            "models/gemini-1.5-flash\n",
+            "models/gemini-1.5-flash-001\n",
+            "models/gemini-1.5-flash-latest\n",
+            "models/gemini-1.5-pro\n",
+            "models/gemini-1.5-pro-001\n",
+            "models/gemini-1.5-pro-latest\n",
+            "models/gemini-pro\n",
+            "models/gemini-pro-vision\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
